--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ build/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.idea/dbnavigator.xml
+.idea/uiDesigner.xml
 
 ### Eclipse ###
 .apt_generated
