--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,6 +23,10 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
 
+    - name: Grant execute permission for gradlew
+      shell: bash
+      run: chmod +x gradlew
+
     - name: Run tests with Gradle
       run: ./gradlew test
 
